# wiseorder-protocol

./: .gitignore  ARTIFACTS.md  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  IMPLEMENTATIONS.md  Makefile  NEXT-SESSION.md  PUNCH_LIST_v0.1.0.md  README.md  SECURITY.md  SPEC.md  SPEC_LOCK_v0.1.md  SPEC_LOCK_v0.2.0.md  SPEC_TLDR.md  STACK_ROLE.md  STATUS-REGISTRY.md  STATUS.md  STRUCTURE.md  SYSTEM-MAP-v0.1.md  TOOLS.md  go.work  pyproject.toml  requirements.txt
audit_bundle_v0.1/: INDEX.md  artifact_manifest.json  artifact_manifest.sha256sum
binary_fixtures/: manifest.json
canonicalization/: README.md
chain/: 2026-05-11T063325_563754Z-75e813e9.win  2026-05-23T071437_482327Z-5964497c.win  genesis.win
docs/: ADOPTION_REALITY.md  BRANCH_PROTECTION.md  CROSS_PLATFORM.md  INTEGRATION.md  ORG_STRUCTURE.md  PRIORITIZED_ACTIONS.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  RELEASE_VERIFICATION.md  REPO_HYGIENE_REPORT.md  REVIEWER_GUIDE.md
go_verifier/: go.mod  main.go
intellagent_runtime/: __init__.py  audit_memory.py  authorization.py  canonical.py  chain.py  cli.py  execution_plan.py  iii.py  kernel.py  memory.py  proposer.py  proposer_transformer.py  refusal.py  runtime.py  state.py  transitions.py  work_order_parser.py  workflow_grammar.py
interop/: README.md
reports/: DOC-COMPLETION-AUDIT-v0.1.md  MILESTONE-FOUNDATION-v0.1.md  NEXT-3-EARNED-MOVES-v0.1.md  canonicalization_readiness_audit_v0.1.md  conformance-report.json  conformance-summary.txt  workforce_hardening_v0_2.md
rust_verifier/: Cargo.toml
rust_verifier/src/: fingerprints.rs  jcs.rs  main.rs  vectors.rs
rust_verifier/tests/: integration.rs
schemas/: fixture.schema.json  implementation.schema.json  manifest.schema.json  vector.schema.json
scripts/: verify_stack_role.sh
site/: founder.html  index.html
tests/: _sigkill_helper.py  conftest.py  test_apply_transition_crash_safety.py  test_audit_memory.py  test_binary_fixture_check.py  test_canonicalization_golden.py  test_chain.py  test_class_b_state_machine.py  test_d5_preimage_size_cap.py  test_execution_plan.py  test_governed_run_pipeline.py  test_identity_model.py  test_iii.py  test_intellagent_authorization.py  test_intellagent_cli.py  test_intellagent_kernel.py  test_intellagent_memory.py  test_intellagent_proposer_transformer.py  test_intellagent_runtime.py  test_intellagent_state.py  test_interop.py  test_minimal_verifier.py  test_replay_diff.py  test_run_conformance.py  test_sandbox_escape_check.py  test_sigkill_recovery.py  test_validate_implementations.py  test_validate_vectors.py  test_work_order_parser.py  test_workflow_grammar.py
tools/: binary_fixture_check.py  canonicalize_cli.py  check_no_pseudocode.py  check_workforce.py  classify_disagreements.py  demo_runner.py  demo_transformer_proposer.py  minimal_verifier.py  os_isolation_runtime.py  pipeline_runtime.py  proposer_runtime.py  real_agent_runtime.py  (+11 more)
(+4273 files in other folders)
